<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="QATestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uSg-fZ-5ep">
                                <rect key="frame" x="115" y="74" width="244" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JGc-JG-6V9">
                                <rect key="frame" x="115" y="123" width="244" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWj-cd-k7O">
                                <rect key="frame" x="16" y="79" width="91" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="RD4-cR-XBi"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b1o-hk-gq2">
                                <rect key="frame" x="16" y="128" width="91" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="qdQ-Ef-72i"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YVI-fJ-DHb">
                                <rect key="frame" x="126" y="191" width="122" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="122" id="Bla-Se-Gtc"/>
                                </constraints>
                                <state key="normal" title="Go"/>
                                <connections>
                                    <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yb2-kg-W7v"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.90950267509727623" green="0.90950267509727623" blue="0.90950267509727623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="uSg-fZ-5ep" firstAttribute="leading" secondItem="WWj-cd-k7O" secondAttribute="trailing" constant="8" id="0CP-iW-uiD"/>
                            <constraint firstItem="JGc-JG-6V9" firstAttribute="top" secondItem="uSg-fZ-5ep" secondAttribute="bottom" constant="19" id="1k4-qg-vQN"/>
                            <constraint firstItem="JGc-JG-6V9" firstAttribute="centerX" secondItem="uSg-fZ-5ep" secondAttribute="centerX" id="3gl-1s-Rm9"/>
                            <constraint firstItem="WWj-cd-k7O" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="59" id="4xj-Wb-nTa"/>
                            <constraint firstItem="JGc-JG-6V9" firstAttribute="width" secondItem="uSg-fZ-5ep" secondAttribute="width" id="7Ra-Z5-qNK"/>
                            <constraint firstItem="b1o-hk-gq2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="DFp-Io-PMH"/>
                            <constraint firstItem="YVI-fJ-DHb" firstAttribute="top" secondItem="JGc-JG-6V9" secondAttribute="bottom" constant="38" id="H3f-ss-Iaz"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uSg-fZ-5ep" secondAttribute="trailing" constant="16" id="I8f-IP-HLa"/>
                            <constraint firstItem="uSg-fZ-5ep" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="YAP-uK-lRo"/>
                            <constraint firstItem="b1o-hk-gq2" firstAttribute="top" secondItem="WWj-cd-k7O" secondAttribute="bottom" constant="28" id="a68-J9-wlf"/>
                            <constraint firstItem="YVI-fJ-DHb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fgZ-WC-QDu"/>
                            <constraint firstItem="uSg-fZ-5ep" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="54" id="kP2-z0-KU0"/>
                            <constraint firstItem="JGc-JG-6V9" firstAttribute="leading" secondItem="b1o-hk-gq2" secondAttribute="trailing" constant="8" id="p5a-8h-Zea"/>
                            <constraint firstItem="WWj-cd-k7O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="vbn-08-AlP"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="loginButton" destination="YVI-fJ-DHb" id="TjE-9y-JCJ"/>
                        <outlet property="passwordTextField" destination="JGc-JG-6V9" id="38C-cB-1bp"/>
                        <outlet property="usernameTextField" destination="uSg-fZ-5ep" id="4Gq-7Q-PbM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="36" y="33.733133433283363"/>
        </scene>
    </scenes>
</document>
